        Class LPInitialTableaux<Constraint>:
            - Removed the copy assignment operator (since this class now uses
              FixedArray internally, which is not copy-assignable).  If you
              need to copy a tableaux, the copy constructor remains available
              (and move assignment is still available also).
        Struct NoSuchType:
            - A new declared-but-not-defined type that can be used as a
              placeholder to avoid compile errors.
        Class PermClass<n>:
            - Everything in this class is now constexpr.
        Class Polynomial<T>:
            - For the iterator-based constructor and init() routine, the
              iterator type is now required to be random access.
        Class RingTraits:
            - Provides new compile-time constants zeroInitialised and
              zeroDivisors.
        Struct TriangulationTraits<dim>:
            - New traits type to help with generic code for working with
              triangulations of different dimensions.
        Class Vector<T>:
            - For the iterator-based constructor, the old recommendation that
              the iterator type be random access is now a hard requirement.
        Function isTriangulation():
            - New function that converts a packet type constant into a
              triangulation dimension.
        Function subscript(), superscript():
            - When passing one of Regina's integer types, there is now a
              precondition that the given value is not infinity.
        Function supportedDim():
            - New function to indicate which dimensions of triangulation are
              supported; this complements maxDim() and standardDim().
        Function valueOf():
            - The native C++ integer versions of valueOf() are now templated.
            - The unsigned integer versions now reject negative numbers
              instead of performing wrap-around arithmetic.